# crypto2

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  README.rst
.cargo/: config.toml
.github/workflows/: build-and-test.yml  rust.yml
examples/: aes.rs  chacha20_poly1305.rs  encoding.rs
src/: base16.rs  base64.rs  lib.rs
src/aeadcipher/: chacha20_poly1305.rs  mod.rs
src/blockcipher/: aria.rs  camellia.rs  gost.rs  mod.rs  rc2.rs
src/blockcipher/aes/: aarch64.rs  dynamic.rs  generic.rs  mod.rs  tablegen.rs  x86.rs
src/blockcipher/sm4/: aarch64.rs  generic.rs  mod.rs  x86.rs
src/blockmode/: cbc.rs  ccm.rs  cfb.rs  ctr.rs  ecb.rs  gcm.rs  gcm_siv.rs  mod.rs  ocb.rs  ofb.rs  siv.rs
src/encoding/: base16.rs  base32.rs  base64.rs  hex.rs  mod.rs  percent.rs  punycode.rs  uu.rs
src/hash/: md2.rs  md4.rs  md5.rs  mod.rs  random_split_test.rs  sha1.rs  sm3.rs
src/hash/blake2/: mod.rs  x32.rs  x64.rs
src/hash/blake2b/: generic.rs  mod.rs  x86.rs
src/hash/blake2b/x86/: avx2.rs  mod.rs
src/hash/blake2s/: generic.rs  mod.rs  x86.rs
src/hash/blake2s/x86/: avx2.rs  mod.rs  sse2.rs  sse41.rs
src/hash/blake3/: generic.rs  mod.rs  x86.rs
src/hash/blake3/x86/: mod.rs  sse2.rs  sse41.rs
src/hash/sha2/: mod.rs
src/hash/sha2/sha256/: aarch64.rs  generic.rs  mod.rs  x86.rs
src/hash/sha2/sha512/: aarch64.rs  generic.rs  mod.rs
src/hash/sha3/: mod.rs
src/kdf/: hkdf.rs  mod.rs
src/mac/: hmac.rs  mod.rs  poly1305.rs
src/mac/ghash/: aarch64.rs  dynamic.rs  generic.rs  mod.rs  x86.rs
src/mac/polyval/: aarch64.rs  dynamic.rs  generic.rs  mod.rs  x86.rs
src/mem/: cmp.rs  mod.rs  zeroize.rs
src/openssh/: mod.rs
src/openssh/chacha20_poly1305/: chacha20.rs  mod.rs
src/simd/: mod.rs
src/simd/v128/: mod.rs  u32x4.rs  u8x16.rs
src/simd/v256/: mod.rs  u32x8.rs  u8x32.rs
src/simd/v512/: mod.rs  u32x16.rs  u8x64.rs
src/streamcipher/: chacha20.rs  mod.rs  rc4.rs  zuc.rs
src/streamcipher/chacha20/: generic.rs  mod.rs  x86.rs
src/streamcipher/xchacha20/: generic.rs  mod.rs  x86.rs
src/util/: and.rs  mod.rs  xor.rs
