[package]
name = "crypto2"
version = "0.2.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["crypto", "encryption", "hash", "mac", "aead"]
categories = ["cryptography"]
description = "cryptographic algorithms"
repository = "https://github.com/shadowsocks/crypto2"
documentation = "https://docs.rs/crypto2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"

[dev-dependencies]
hex = "0.4"

[features]
default = [
    "std",
    "openssh",
]

std = []
openssh = []
# Disable hardware acceleration.
# NOTE: aarch64 hardware acceleration requires core::arch to stablize intrinsics functions
force-soft = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
opt-level = 3 # Use slightly better optimizations.
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false
